--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,9 @@
 server.port=10000
 ### mysql --> 监控等业务功能
 spring.datasource.druid.biz-mysql.username=root
-spring.datasource.druid.biz-mysql.password=root
+spring.datasource.druid.biz-mysql.password=SHQa:=/fY6Sy
 spring.datasource.druid.biz-mysql.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.druid.biz-mysql.url=jdbc:mysql://127.0.0.1:3306/steel?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&serverTimezone=GMT%2B8&allowMultiQueries=true&useSSL=false
+spring.datasource.druid.biz-mysql.url=jdbc:mysql://47.114.180.65:3306/steel?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&serverTimezone=GMT%2B8&allowMultiQueries=true&useSSL=false
 spring.datasource.druid.biz-mysql.initialSize=5
 spring.datasource.druid.biz-mysql.minIdle=5
 spring.datasource.druid.biz-mysql.maxActive=50
